add typescript support

--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "dependencies": {
     "cypress": "^6.2.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "typescript": "^4.1.3"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
